# pwr-repo

./: .gitignore
sem2/SortingTester v2.2/src/: Main.java
sem2/aisd-lab/data/: BinarySortRandomGenerator.txt  BinarySortReversedGenerator.txt  BinarySortShuffledGenerator.txt  CocktailSortReversedGenerator.txt  SelectionSortRandomGenerator.txt  SelectionSortReversedGenerator.txt  SelectionSortShuffledGenerator.txt
sem2/aisd-lab/src/: BubbleSort.java
sem2/ak-lab/: cesar.asm  generator.asm  generator_v2.asm  kalkulator.asm  tictactoe.asm
sem2/equilibrium-engine/: package.json  pnpm-lock.yaml
sem2/my-disk-simulator/: package.json  pnpm-lock.yaml
sem2/my-disk-simulator/app/: layout.tsx  page.tsx
sem2/my-disk-simulator/components/: head-movement-chart.tsx  simulation-config-form.tsx  simulation-results.tsx
sem2/my-disk-simulator/constants/: index.ts
sem2/my-disk-simulator/lib/: algorithms.ts  tests.ts  types.ts  utils.ts
sem2/page-replacement-simulator/: package.json  pnpm-lock.yaml
sem2/page-replacement-simulator-v2/: package.json  pnpm-lock.yaml
sem2/page-replacement-simulator/app/: globals.css  page.tsx
sem2/page-replacement-simulator/lib/: algorithms.ts  generator.ts
sem2/so-lab/src/: Main.java
sem3/pp/lab02-pascal/: build.sbt
sem3/pp/lab1+cm/: my.ml  name.scala
sem3/pp/lab2/: zad1.ml  zad2.ml  zad3.ml
sem3/pp/lab3/: zad1.ml  zad2.ml  zad3.sc
sem3/pp/lab3-scala/: build.sbt
sem3/tep/: AGENTS.md
sem3/tep/zad5/: CMakeLists.txt  Error.h  Interface.cpp  Interface.h  RefCounter.h  Result.h  SmartPointer.h  Tree.cpp  Tree.h  constants.h
(+281 files in other folders)
